@@ -1,3 +1,8 @@
+2010-09-10  Colin Watson  <cjwatson@ubuntu.com>
+
+	* util/grub-install.in: Don't try to verify core.img until after
+	running grub-mkimage to create it.
+
 2010-09-10  Robert Millan  <rmh@gnu.org>
 
 	* util/grub.d/10_hurd.in: Add misc readability checks.
